--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,104 @@
-.sign/*
+/Debug
+/SA_Report
+/Debug
+/Debug
+/Debug
+/Debug
+/Debug
+/Debug
+/Debug
+/Debug
+/Debug
+/Debug
+/Debug
+/Debug
+/Debug
+/Debug
+/Debug
+/Debug
+/Debug
+/Debug
+/Debug
+/Debug
+/Debug
+/Debug
+/Debug
+/Debug
+/Debug
+/Debug
+/Debug
+/Debug
+/Debug
+/Debug
+/Debug
+/Debug
+/Debug
+/Debug
+/Debug
+/Debug
+/Debug
+/Debug
+/Debug
+/Debug
+/Debug
+/Debug
+/Debug
+/Debug
+/Debug
+/Debug
+/Debug
+/Debug
+/Debug
+/Debug
+/Debug
+/Debug
+/Debug
+/Debug
+/Debug
+/Debug
+/Debug
+/Debug
+/Debug
+/Debug
+/Debug
+/Debug
+/Debug
+/Debug
+/Debug
+/Debug
+/Debug
+/Debug
+/Debug
+/Debug
+/Debug
+/Debug
+/Debug
+/Debug
+/Debug
+/Debug
+/Debug
+/Debug
+/Debug
+/Debug
+/Debug
+/Debug
+/Debug
+/Debug
+/Debug
+/Debug
+/Debug
+/Debug
+/Debug
+/Debug
+/Debug
+/Debug
+/Debug
+/Debug
+/Debug
+/Debug
+/Debug
+/Debug
+/Debug
+/Debug
+/Debug
+/Debug
