Added README.md file to 'edc' branch

--- a/.gitignore
+++ b/.gitignore
@@ -1,104 +1,1 @@
-/Debug
-/SA_Report
-/Debug
-/Debug
-/Debug
-/Debug
-/Debug
-/Debug
-/Debug
-/Debug
-/Debug
-/Debug
-/Debug
-/Debug
-/Debug
-/Debug
-/Debug
-/Debug
-/Debug
-/Debug
-/Debug
-/Debug
-/Debug
-/Debug
-/Debug
-/Debug
-/Debug
-/Debug
-/Debug
-/Debug
-/Debug
-/Debug
-/Debug
-/Debug
-/Debug
-/Debug
-/Debug
-/Debug
-/Debug
-/Debug
-/Debug
-/Debug
-/Debug
-/Debug
-/Debug
-/Debug
-/Debug
-/Debug
-/Debug
-/Debug
-/Debug
-/Debug
-/Debug
-/Debug
-/Debug
-/Debug
-/Debug
-/Debug
-/Debug
-/Debug
-/Debug
-/Debug
-/Debug
-/Debug
-/Debug
-/Debug
-/Debug
-/Debug
-/Debug
-/Debug
-/Debug
-/Debug
-/Debug
-/Debug
-/Debug
-/Debug
-/Debug
-/Debug
-/Debug
-/Debug
-/Debug
-/Debug
-/Debug
-/Debug
-/Debug
-/Debug
-/Debug
-/Debug
-/Debug
-/Debug
-/Debug
-/Debug
-/Debug
-/Debug
-/Debug
-/Debug
-/Debug
-/Debug
-/Debug
-/Debug
-/Debug
-/Debug
-/Debug
-/Debug
+.sign/*
